{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "PlayerInput",
            "id": "af3cc61f-2afa-4d4f-91f7-d1e1e09df550",
            "actions": [
                {
                    "name": "Balance",
                    "type": "Value",
                    "id": "8bd820c9-c71b-4b6e-bf17-2d46d77f2d36",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Move_L",
                    "type": "Button",
                    "id": "9de778de-d372-44cd-bd23-cd7d4f2fb344",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Move_R",
                    "type": "Button",
                    "id": "ddc09e89-a242-4d9e-b1e7-f82516b58671",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "1D Axis",
                    "id": "eda00469-4ba6-4e8c-9c28-94409e0062a5",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Balance",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "8b3d11b8-fe94-4d61-a267-f6b352a14246",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Balance",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "2bf2c7b0-fa15-41af-a4ce-323e57d8aa79",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Balance",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "087b72ea-35f0-4115-8328-4ced373d14be",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move_L",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e21a68fd-3b23-4ac6-a1dd-e1b5cc44fc2b",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move_R",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}